# CompMath-AE

./: .gitignore  DormanPrince.cpp  Dormand.cpp  DormandPrince.cpp  DormandPrince_wow.cpp  GravPot.h  LegFunc.h  Observatories.cpp  Observatories.h  README.md  Vnm.h  main.cpp  main.h
Formule/: Formule.h  GravPot.h  LegFunc.h  Vnm.h
Lenochka2/: orbit.txt  resetOrbit.txt
Lenochka2/Formule/: DerivativesV.h
Lenochka2/InverseProblem/: DistanceOrbits.cpp  LeastSquares.cpp  LeastSquares.h  RightPart.cpp
Lenochka2/NumIntegrate/: IntegrateFunc.cpp
Lenochka2/sofa/: makefile
Math/: ComplexNums.h
Naydenova/: AdvancedFunction.cpp  AdvancedFunction.h  CMakeLists.txt  ComplexNums.h  Converter.cpp  Converter.h  Derivatives.cpp  Derivatives.h  DormandPrince.cpp  DormandPrince.h  DoubleDerivatives.cpp  DoubleDerivatives.h  GravPot.cpp  GravPot.h  LegFunc.h  Makefile  Observatories.cpp  Observatories.h  SLE.cpp  SLE.h  Vnm.cpp  Vnm.h  comp_math  file.txt  graph.py  graph.sh  main.cpp  main.h  stations.txt  test  test.cpp
ProshichevShushkov/: CMakeLists.txt  CompMath  DistanceOrbits.cpp  DistanceOrbits.h  IntersatellitesDistance.cpp  Makefile  README.md  countOfStrings.sh  distance.txt  graph.py  graph.sh  main.cpp  main.h  orbit.py  orbit.txt  resetOrbit.sh  resetOrbit.txt  resetResult.txt  result.txt  text.txt
ProshichevShushkov/Formule/: Converter.cpp  Converter.h  DerivativesV.cpp  DerivativesV.h  GravPot.cpp  GravPot.h  Vnm.cpp  Vnm.h
ProshichevShushkov/InverseProblem/: DistanceOrbits.cpp  DistanceOrbits.h  LeastSquares.cpp  LeastSquares.h  RightPart.cpp  RightPart.h
ProshichevShushkov/Math/: ComplexNums.h  Matrix.h  SupportMath.cpp  SupportMath.h
ProshichevShushkov/NumIntegrate/: IntegrateFunc.cpp  IntegrateFunc.h
comp_math/: CMakeLists.txt  Converter.cpp  Converter.h  DormandPrince.cpp  GravPot.cpp  Observatories.cpp  comp_math  main.cpp  main.h
networks/VLAN/task4/ubR/: task4-v10.sh  task4-v11.sh  task4-v12.sh  task4-v13.sh  task4-v14.sh  task4-v2.sh  task4-v3.sh  task4-v4.sh  task4-v5.sh  task4-v7.sh  task4-v8.sh  task4-v9.sh
sofa/: t_sofa_c.c
