cmake_minimum_required(VERSION 3.24)
project(ProshichevShushkov)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(Formule)
include_directories(Math)
include_directories(sofa)

add_executable(ProshichevShushkov
        Formule/Converter.h
        Formule/GravPot.cpp
        Formule/GravPot.h
        Formule/Vnm.h
        Math/ComplexNums.h
        sofa/a2af.c
        sofa/a2tf.c
        sofa/ab.c
        sofa/ae2hd.c
        sofa/af2a.c
        sofa/anp.c
        sofa/anpm.c
        sofa/apcg.c
        sofa/apcg13.c
        sofa/apci.c
        sofa/apci13.c
        sofa/apco.c
        sofa/apco13.c
        sofa/apcs.c
        sofa/apcs13.c
        sofa/aper.c
        sofa/aper13.c
        sofa/apio.c
        sofa/apio13.c
        sofa/atcc13.c
        sofa/atccq.c
        sofa/atci13.c
        sofa/atciq.c
        sofa/atciqn.c
        sofa/atciqz.c
        sofa/atco13.c
        sofa/atic13.c
        sofa/aticq.c
        sofa/aticqn.c
        sofa/atio13.c
        sofa/atioq.c
        sofa/atoc13.c
        sofa/atoi13.c
        sofa/atoiq.c
        sofa/bi00.c
        sofa/bp00.c
        sofa/bp06.c
        sofa/bpn2xy.c
        sofa/c2i00a.c
        sofa/c2i00b.c
        sofa/c2i06a.c
        sofa/c2ibpn.c
        sofa/c2ixy.c
        sofa/c2ixys.c
        sofa/c2s.c
        sofa/c2t00a.c
        sofa/c2t00b.c
        sofa/c2t06a.c
        sofa/c2tcio.c
        sofa/c2teqx.c
        sofa/c2tpe.c
        sofa/c2txy.c
        sofa/cal2jd.c
        sofa/cp.c
        sofa/cpv.c
        sofa/cr.c
        sofa/d2dtf.c
        sofa/d2tf.c
        sofa/dat.c
        sofa/dtdb.c
        sofa/dtf2d.c
        sofa/eceq06.c
        sofa/ecm06.c
        sofa/ee00.c
        sofa/ee00a.c
        sofa/ee00b.c
        sofa/ee06a.c
        sofa/eect00.c
        sofa/eform.c
        sofa/eo06a.c
        sofa/eors.c
        sofa/epb.c
        sofa/epb2jd.c
        sofa/epj.c
        sofa/epj2jd.c
        sofa/epv00.c
        sofa/eqec06.c
        sofa/eqeq94.c
        sofa/era00.c
        sofa/fad03.c
        sofa/fae03.c
        sofa/faf03.c
        sofa/faju03.c
        sofa/fal03.c
        sofa/falp03.c
        sofa/fama03.c
        sofa/fame03.c
        sofa/fane03.c
        sofa/faom03.c
        sofa/fapa03.c
        sofa/fasa03.c
        sofa/faur03.c
        sofa/fave03.c
        sofa/fk425.c
        sofa/fk45z.c
        sofa/fk524.c
        sofa/fk52h.c
        sofa/fk54z.c
        sofa/fk5hip.c
        sofa/fk5hz.c
        sofa/fw2m.c
        sofa/fw2xy.c
        sofa/g2icrs.c
        sofa/gc2gd.c
        sofa/gc2gde.c
        sofa/gd2gc.c
        sofa/gd2gce.c
        sofa/gmst00.c
        sofa/gmst06.c
        sofa/gmst82.c
        sofa/gst00a.c
        sofa/gst00b.c
        sofa/gst06.c
        sofa/gst06a.c
        sofa/gst94.c
        sofa/h2fk5.c
        sofa/hd2ae.c
        sofa/hd2pa.c
        sofa/hfk5z.c
        sofa/icrs2g.c
        sofa/ir.c
        sofa/jd2cal.c
        sofa/jdcalf.c
        sofa/ld.c
        sofa/ldn.c
        sofa/ldsun.c
        sofa/lteceq.c
        sofa/ltecm.c
        sofa/lteqec.c
        sofa/ltp.c
        sofa/ltpb.c
        sofa/ltpecl.c
        sofa/ltpequ.c
        sofa/moon98.c
        sofa/num00a.c
        sofa/num00b.c
        sofa/num06a.c
        sofa/numat.c
        sofa/nut00a.c
        sofa/nut00b.c
        sofa/nut06a.c
        sofa/nut80.c
        sofa/nutm80.c
        sofa/obl06.c
        sofa/obl80.c
        sofa/p06e.c
        sofa/p2pv.c
        sofa/p2s.c
        sofa/pap.c
        sofa/pas.c
        sofa/pb06.c
        sofa/pdp.c
        sofa/pfw06.c
        sofa/plan94.c
        sofa/pm.c
        sofa/pmat00.c
        sofa/pmat06.c
        sofa/pmat76.c
        sofa/pmp.c
        sofa/pmpx.c
        sofa/pmsafe.c
        sofa/pn.c
        sofa/pn00.c
        sofa/pn00a.c
        sofa/pn00b.c
        sofa/pn06.c
        sofa/pn06a.c
        sofa/pnm00a.c
        sofa/pnm00b.c
        sofa/pnm06a.c
        sofa/pnm80.c
        sofa/pom00.c
        sofa/ppp.c
        sofa/ppsp.c
        sofa/pr00.c
        sofa/prec76.c
        sofa/pv2p.c
        sofa/pv2s.c
        sofa/pvdpv.c
        sofa/pvm.c
        sofa/pvmpv.c
        sofa/pvppv.c
        sofa/pvstar.c
        sofa/pvtob.c
        sofa/pvu.c
        sofa/pvup.c
        sofa/pvxpv.c
        sofa/pxp.c
        sofa/refco.c
        sofa/rm2v.c
        sofa/rv2m.c
        sofa/rx.c
        sofa/rxp.c
        sofa/rxpv.c
        sofa/rxr.c
        sofa/ry.c
        sofa/rz.c
        sofa/s00.c
        sofa/s00a.c
        sofa/s00b.c
        sofa/s06.c
        sofa/s06a.c
        sofa/s2c.c
        sofa/s2p.c
        sofa/s2pv.c
        sofa/s2xpv.c
        sofa/sepp.c
        sofa/seps.c
        sofa/sofa.h
        sofa/sofam.h
        sofa/sp00.c
        sofa/starpm.c
        sofa/starpv.c
        sofa/sxp.c
        sofa/sxpv.c
        sofa/taitt.c
        sofa/taiut1.c
        sofa/taiutc.c
        sofa/tcbtdb.c
        sofa/tcgtt.c
        sofa/tdbtcb.c
        sofa/tdbtt.c
        sofa/tf2a.c
        sofa/tf2d.c
        sofa/tpors.c
        sofa/tporv.c
        sofa/tpsts.c
        sofa/tpstv.c
        sofa/tpxes.c
        sofa/tpxev.c
        sofa/tr.c
        sofa/trxp.c
        sofa/trxpv.c
        sofa/tttai.c
        sofa/tttcg.c
        sofa/tttdb.c
        sofa/ttut1.c
        sofa/ut1tai.c
        sofa/ut1tt.c
        sofa/ut1utc.c
        sofa/utctai.c
        sofa/utcut1.c
        sofa/xy06.c
        sofa/xys00a.c
        sofa/xys00b.c
        sofa/xys06a.c
        sofa/zp.c
        sofa/zpv.c
        sofa/zr.c
        IntersatellitesDistance.cpp
        LegFunc.h
        main.cpp
        main.h)
